test/Common/LinkerScriptParsing/Errors/Sections/OutputSectionPrologue/OutSectAlign/Inputs/script1.t
SECTIONS {
  FOO : ALIGN(0xasdf) { *(*foo*) }
}